Fix rules modal x button hover bug in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ ul {
 }
   
 .close:hover {
-    color:#0F0916;
+    color: var(--primary-font-color);
     cursor: pointer;
 }
 
